...
    viewModel: ProfileViewModel,
    launchImagePicker: () -> Unit,
    vertScroll: ScrollState,
) {
    Column(
        modifier = Modifier
            .testTag("profile_screen_root")
            .fillMaxSize()
            .background(color = MaterialTheme.colorScheme.background),
    ) {
        MainHeader(
            text = stringResource(Res.string.profile_title),
            trailingContent = {
                IconButton(
                    onClick = { viewModel.onIntent(ProfileIntent.LogoutClicked) },
                    modifier = Modifier.testTag("profile_logout_button"),
                ) {
                    Icon(
                        painter = painterResource(Res.drawable.ic_logout),
                        contentDescription = stringResource(Res.string.profile_log_out_content_description),
                        tint = AppTheme.colors.highlightYellow,
                    )
...
